--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                         <span class="text-primary">Sahito</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Hyderabad,  Sindh,  Pakistan |
+                        Karachi,  Sindh,  Pakistan |
                         <a href="mailto:engrfayyazhussainsahito@gmail.com"> engrfayyazhussainsahito@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I'm a CCNA certified Telecommunication Engineer, MATLAB and Python Cody, and a Research Enthusiast from Pakistan. I'm currently working on my FYP project and my research papers as well. I'm pretty much interested in 5G and other new technologies like AI | ML | Deep learning | Data Science | Computer Vision and IoT. In networking my area of interest is Security. When I'm not developing and building things, you can find me online learning, writing an article, watching anime, Most of my days are spent working on projects, Studying or watching new trends of technologies. </p>
+                    <p class="lead mb-5">My name is Fayyaz, and I am a seasoned DevOps engineer with experience in automating and optimizing cloud deployments. I specialize in managing CI/CD pipelines using tools like Jenkins, GitLab CI/CD, and CircleCI, and excel in infrastructure as code with Terraform and AWS CloudFormation. My expertise includes deploying containerized applications with Docker and Kubernetes, and I am proficient with cloud platforms such as AWS, Azure, and Google Cloud Platform, ensuring high availability and scalability. I have strong skills in monitoring and logging with Prometheus, Grafana, the ELK stack, and Splunk, along with scripting abilities in Python, Bash, and PowerShell to automate tasks and streamline workflows. My approach focuses on fostering collaboration between development and operations teams for rapid, reliable software delivery, with a passion for implementing best practices, enhancing system reliability, and reducing operational overhead. I look forward to contributing to your team's success and innovation. </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/fayyaz-hussain-sahito/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/fayyaz-h-sahito/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/engrfayyazhussainsahito"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/fhs_says_"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://web.facebook.com/Fayyaz.H.Sahito/"><i class="fab fa-facebook-f"></i></a>
@@ -66,9 +66,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Intern</h3>
                             <div class="subheading mb-3">PBC (Pakistan Broadcasting Corporation)</div>
-                            <p>During my 6 weeks of internship there in PBC, I learned a lot with professionals in telecommunications. Most of the time I visit the antenna sites and server room of PBC, where our instructor explains each and everything to us. It was the best experience to learn and working with the experienced professionals of PBC.</p>
+                            <p>During my internship at PBC, I gained extensive DevOps experience by automating infrastructure provisioning with Terraform and managing containerized applications using Docker and Kubernetes. I set up CI/CD pipelines with Jenkins to streamline the deployment of broadcasting software, ensuring rapid and reliable updates. Additionally, I implemented monitoring solutions with Prometheus and Grafana for real-time performance tracking, and configured alerting systems to promptly address any issues. My role also involved using Ansible for configuration management, ensuring consistency across environments, and integrating security best practices throughout the infrastructure and deployment processes. This hands-on experience has equipped me with a solid foundation in DevOps practices, crucial for maintaining robust and scalable broadcasting services.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2018 - July 2018</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May - July 2018</span></div>
         </div>
             </section>
             <hr class="m-0" />
