--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <h3 class="mb-0">University of Sindh</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
                             <div>Telecommunication Engineering</div>
-                            <p>GPA: 3.25</p>
+                            <p>GPA: 3.00</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2017 - March-2021</span></div>
                     </div>
@@ -96,11 +96,11 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">  
-                        <h3 class="mb-0">Ambition Academy </h3>
-                            <div class="subheading mb-3">Intermediate- (Engineering)</div>
-                            <p>GPA: 3.12</p>
+                        <h3 class="mb-0"> </h3>
+                            <div class="subheading mb-3"></div>
+                            <p></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2014 - November 2016</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
                     </div>
                 </div>
             </section>
@@ -111,28 +111,31 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-bash"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-Kubernetes"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-docker"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-ansible"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-terraform"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-git"></i></li>
                     </ul>
-                    <div class="subheading mb-3">Projects</div>
+                    <div class="subheading mb-3">Projects and Papers</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Sentiment analysis for products, apps and video- FYP
+                            Sentiment analysis for products, apps and video - FYP
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            WordPress Sites (39)
+                            Sentiment analysis for product, content and video - Paper
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Digital Marketing Projects (06)
+                            
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Adobe Photoshop Projects (04)
+                            
                         </li>
                     </ul>
                 </div>
@@ -142,8 +145,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a technologist, I enjoy most of my time being outdoors. In the weekends, I spend my time with friends in outing and in tours. During the vacations i spend all of my time with family.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the networking, digital marketing and web development world.</p>
+                    <pAs></pAs> As a passionate DevOps engineer, my interests lie in the seamless integration of development and operations through cutting-edge automation, cloud computing, and infrastructure as code (IaC). I thrive on designing and implementing robust CI/CD pipelines using tools like Jenkins and GitLab CI, ensuring rapid and reliable software delivery. My expertise extends to cloud platforms such as AWS, Azure, and Google Cloud, where I leverage services and architectures like Kubernetes and Docker for scalable and efficient solutions. I am deeply committed to security, integrating DevSecOps practices and tools to safeguard applications and infrastructure. My enthusiasm for performance optimization drives me to continually enhance system reliability and efficiency, utilizing monitoring and logging tools like Prometheus and ELK stack. I also prioritize effective collaboration and communication within agile teams, employing tools such as Slack and Jira to foster a cohesive and productive work environment. With a strong foundation in scripting languages like Python and Bash, I am dedicated to automating workflows and streamlining operations, always with an eye towards innovation and excellence in the ever-evolving field of DevOps.</p>
+                    <p class="mb-0"> </p>
                 </div>
             </section>
             <hr class="m-0" />
